--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Scott's site</title>
+  </head>
     <body>
       <p> This site is cool,
       as well as this class!</p>
